<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/forslides"
    tools:context=".finish">

    <!--    <ImageView-->
<!--        android:id="@+id/imageBack"-->
<!--        android:layout_width="74dp"-->
<!--        android:layout_height="69dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        app:srcCompat="@drawable/back" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageZvyk"-->
<!--        android:layout_width="74dp"-->
<!--        android:layout_height="69dp"-->
<!--        android:clickable="false"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/imageForSlides"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        app:srcCompat="@drawable/zvyk" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageNext"-->
<!--        android:layout_width="74dp"-->
<!--        android:layout_height="69dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        app:srcCompat="@drawable/next" />-->


    <!--<ImageView
        android:id="@+id/imageForSlides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/forslides"
        android:backgroundTintMode="add"
        android:fitsSystemWindows="false"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" /> -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#52FDFDFD"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textSize="34sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="104dp"
        android:layout_height="51dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.963" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageExit"-->
<!--        android:layout_width="147dp"-->
<!--        android:layout_height="165dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/textView"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintVertical_bias="0.877"-->
<!--        app:srcCompat="@drawable/exit" />-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="53dp"
        app:adSize="BANNER"

        app:adUnitId="@string/finishR"
        app:layout_constraintBottom_toTopOf="@+id/btnRestart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>